--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,14 +5,13 @@
 
 trigger: none
 
-pool:
-  vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+  - stage: Build and Test
+    jobs:
+    - job: Build
+      pool:
+        vmImage: windows-latest
+      steps:
+        -   
