--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,6 @@ stages:
       - task: DotNetCoreCLI@2
         inputs:
           command: 'restore'
+          projects: '/*.csproj'
           feedsToUse: 'select'
           vstsFeed: 'bc03c712-44c4-4932-87ba-ac35eaa10b33/0d882750-e9f7-4349-9c31-ece9b225e1fc'
