--- a/nuget.config
+++ b/nuget.config
@@ -3,5 +3,6 @@
   <packageSources>
     <clear />
     <add key="Dotnet-feed" value="https://pkgs.dev.azure.com/Devopspractice-2025/bc03c712-44c4-4932-87ba-ac35eaa10b33/_packaging/Dotnet-feed/nuget/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
