--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,9 @@ stages:
           projects: '/*.csproj'
           feedsToUse: 'select'
           vstsFeed: 'bc03c712-44c4-4932-87ba-ac35eaa10b33/0d882750-e9f7-4349-9c31-ece9b225e1fc'
+
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'build'
+          projects: '/*.csproj'
+          arguments: '--configuration  $(buildConfiguration)'
