Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,4 +42,10 @@ stages:
           projects: '/*.csproj'
           arguments: '--configuration  $(buildConfiguration)'
 
+      - task: SonarCloudAnalyze@3
+        inputs:
+          jdkversion: 'JAVA_HOME_17_X64'
+          
+
+
 
