--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ stages:
       - task: UseDotNet@2
         inputs:
           packageType: 'sdk'
-          version: '6.x.x'
+          version: '6.0.x'
 
       - task: SonarCloudPrepare@3
         inputs:
