--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,13 +16,13 @@ stages:
     - job: Build
       displayName: 'Build and package'
       pool:
-        vmImage: 'windows-latest'
+        vmImage: 'ubuntu-latest'
       steps:
       - task: UseDotNet@2
         displayName: 'Install DotNet'
         inputs:
           packageType: 'sdk'
-          version: '6.0.x'
+          version: '8.0.x'
 
       - task: SonarCloudPrepare@3
         displayName: 'Prepare sonarQube'
