--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,4 +94,9 @@ stages:
         runOnce:
           deploy:
             steps:
-              -           
+              - task: DownloadBuildArtifacts@1
+                inputs:
+                  buildType: 'current'
+                  downloadType: 'single'
+                  artifactName: 'drop'
+                  downloadPath: '$(System.ArtifactsDirectory)/drop'
